fix: hide sidebar labels when collapsed and prevent hover expansion

--- a/app/eventyay/static/pretixcontrol/scss/_sidebar.scss
+++ b/app/eventyay/static/pretixcontrol/scss/_sidebar.scss
@@ -20,6 +20,12 @@
     outline: none;
   }
 
+.sidebar.collapsed:hover {
+    width: 70px;
+}
+.sidebar-collapsed .sidebar-text {
+    display: none;
+}
   .fa-bars {
     color: #fff;
   }
